--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,6 +96,7 @@ services:
     tty: true
     volumes:
       - ../../projects:/user_data
+      - vol1:/csvs
     ports:
       - "8888:8888" # Jupyter
     networks:
