ajuste de cores.

--- a/spark-hadoop/config/spark/spark-defaults.conf
+++ b/spark-hadoop/config/spark/spark-defaults.conf
@@ -43,6 +43,7 @@ spark.executor.memory            512m
 
 # Isso deve ser menor que o parametro yarn.nodemanager.resource.memory-mb (no arquivo yarn-site.xml)
 spark.yarn.am.memory             512m
+spark.executor.cores             4
 
 # Opções: cluster ou client
 spark.submit.deployMode          client
