--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     hostname: spark-master
     tty: true
     volumes:
-      - ../../projects:/user_data
-      - /home/hadoop:/hadoop_data
-      - vol1:/csvs
+      - /home/ubuntu/projects:/user_data
+      - /media/data/hadoop:/hadoop_data
+      - etl_data:/glustervol1
     ports:
       - "8088:8088" # ResourceManager
       - "9870:9870" # NameNode WebUI
@@ -24,15 +24,16 @@ services:
       - "SPARK_LOCAL_IP=spark-master"
     deploy:
       placement:
-        constraints: [node.role == manager]
+        constraints:
+          - node.labels.workerid == 1
   spark-worker-1:
     image: spark-hadoop-cluster:latest
     container_name: spark-worker-1
     hostname: spark-worker-1
     tty: true
     volumes:
-      - /home/hadoop:/hadoop_data
-      - vol1:/csvs
+      - /media/data/hadoop:/hadoop_data
+      - etl_data:/glustervol1
     depends_on:
       - spark-master
     ports:
@@ -46,15 +47,15 @@ services:
     deploy:
       placement:
         constraints:
-          - node.labels.workerid == 1
+          - node.labels.workerid == 2
   spark-worker-2:
     image: spark-hadoop-cluster:latest
     container_name: spark-worker-2
     hostname: spark-worker-2
     tty: true
     volumes:
-      - /home/hadoop:/hadoop_data
-      - vol1:/csvs
+      - /media/data/hadoop:/hadoop_data
+      - etl_data:/glustervol1
     depends_on:
       - spark-master
     ports:
@@ -67,15 +68,14 @@ services:
         ipv4_address: 10.5.0.4
     deploy:
       placement:
-        constraints:
-          - node.labels.workerid == 2
+        constraints: [node.role == manager]
   hive-server:
     image: hive-server:latest
     container_name: hive-server
     hostname: hive-server
     tty: true
     volumes:
-      - /home/hadoop:/hadoop_data
+      - /media/data/hadoop:/hadoop_data
     ports:
       - "10000:10000" # HiveServer2 - Binary Mode
       - "10001:10001" # HiveServer - HTTP Mode
@@ -95,8 +95,9 @@ services:
     hostname: jupyter
     tty: true
     volumes:
-      - ../../projects:/user_data
-      - vol1:/csvs
+      - /home/ubuntu/projects:/user_data
+      - /media/data/hadoop:/hadoop_data
+      - etl_data:/glustervol1
     ports:
       - "8888:8888" # Jupyter
     networks:
@@ -115,6 +116,9 @@ networks:
      config:
        - subnet: 10.5.0.0/16
 volumes:
-  vol1:
-    driver: glustermochhoa
-    name: "staging-gfs"
+  etl_data:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /mnt/vol1
