--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       placement:
         constraints:
           - node.labels.workerid == 1
+    extra_hosts:
+      - "spark:10.5.0.2"
   spark-worker-1:
     image: spark-hadoop-cluster:latest
     container_name: spark-worker-1
