--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,8 +41,10 @@ services:
     ports:
       - "8081:8081" # WebUI Spark worker
       - "6042:8042" # NodeManager
+      - "8088:8088" # ResourceManager
     environment:
       - "SPARK_LOCAL_IP=spark-worker-1"
+      - "SPARK_WORKER_WEBUI_PORT=8088"
     networks:
       cluster-network:
         ipv4_address: 10.5.0.3
@@ -63,8 +65,10 @@ services:
     ports:
       - "8082:8081" # WebUI Spark worker
       - "7042:8042" # NodeManager
+      - "8088:8088" # ResourceManager
     environment:
       - "SPARK_LOCAL_IP=spark-worker-2"
+      - "SPARK_WORKER_WEBUI_PORT=8088"
     networks:
       cluster-network:
         ipv4_address: 10.5.0.4
