--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
     ports:
       - "8081:8081" # WebUI Spark worker
       - "6042:8042" # NodeManager
+      - "4041:4040" # Spark
     environment:
       - "SPARK_LOCAL_IP=spark-worker-1"
       - "SPARK_WORKER_WEBUI_PORT=8081"
@@ -64,6 +65,7 @@ services:
     ports:
       - "8082:8081" # WebUI Spark worker
       - "7042:8042" # NodeManager
+      - "4042:4040" # Spark
     environment:
       - "SPARK_LOCAL_IP=spark-worker-2"
       - "SPARK_WORKER_WEBUI_PORT=8081"
