ajuste de versão de spark no jupyter e de localização de bibiliotecas compartilhadas no yarn.

--- a/spark-hadoop/config/spark/spark-defaults.conf
+++ b/spark-hadoop/config/spark/spark-defaults.conf
@@ -47,3 +47,6 @@ spark.executor.cores             4
 
 # Opções: cluster ou client
 spark.submit.deployMode          client
+
+
+spark.yarn.jars    hdfs://spark-master:9000/shared-libs/*.jar
