otimização e nova configuracao da fila yarn.

--- a/spark-hadoop/config/spark/spark-defaults.conf
+++ b/spark-hadoop/config/spark/spark-defaults.conf
@@ -42,8 +42,12 @@ spark.driver.memory              512m
 spark.executor.memory            512m
 
 # Isso deve ser menor que o parametro yarn.nodemanager.resource.memory-mb (no arquivo yarn-site.xml)
-spark.yarn.am.memory             356m
-spark.executor.cores             4
+spark.yarn.am.memory             256m
+spark.executor.cores             1
+spark.executor.instances         1
 
 # Opções: cluster ou client
 spark.submit.deployMode          client
+
+
+spark.yarn.archive    hdfs://spark-master:9000/shared-libs/spark-libs.tar.gz
