--- a/hive/Dockerfile-hive
+++ b/hive/Dockerfile-hive
@@ -19,7 +19,7 @@ ENV PYTHONPATH /usr/bin/python3
 ENV PATH $PATH:$JAVA_HOME/bin:$PYTHONPATH:$HIVE_HOME/bin:$HADOOP_HOME/bin
 
 # Install dependencies
-RUN apt-get update && apt-get install -y curl gnupg2 ca-certificates
+RUN apt-get update && apt-get install -y curl gnupg2 ca-certificates cron
 
 # Install Python 3.11
 RUN apt-get update && apt-get install -y --no-install-recommends python3 python3-pip python3-dev gcc
@@ -83,6 +83,8 @@ COPY /hive/config/hive/*.xml $HIVE_HOME/conf/
 # Todos os arquivos de configuracao que devem ser copiados para dentro do
 # container estao aqui
 COPY /hive/scripts /
+COPY /hive/cron /etc/cron.d/
+RUN chmod 0644 /etc/cron.d/*
 
 # Portas 10000:10002 relativas ao Hiveserver2, 9999 webui do Hiveserver
 EXPOSE 22 9083 10000 10001 10002 9999 3306
