ajuste de opts para yarn e hadooppara woerker 2.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,9 +70,8 @@ services:
     environment:
       - "SPARK_LOCAL_IP=spark-worker-2"
       - "SPARK_WORKER_WEBUI_PORT=8081"
-      - "HADOOP_OPTS=  -XX:+UseContainerSupport -XX:MaxRAMPercentage=80.0 -Dcom.sun.management.jmxremote --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED"
-      - "YARN_RESOURCEMANAGER_OPTS=  -XX:+UseContainerSupport -XX:MaxRAMPercentage=80.0 -Dcom.sun.management.jmxremote --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED"
-      - "YARN_NODEMANAGER_OPTS=  -XX:+UseContainerSupport -XX:MaxRAMPercentage=80.0 -Dcom.sun.management.jmxremote --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED"
+      - "HADOOP_OPTS=-XX:+IgnoreUnrecognizedVMOptions -XX:-UseContainerSupport --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED   --add-opens=java.base/java.io=ALL-UNNAMED  --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED   --add-opens=java.base/sun.nio.ch=ALL-UNNAMED   --add-opens=java.base/java.util=ALL-UNNAMED   --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED"
+      - "YARN_OPTS=-XX:+IgnoreUnrecognizedVMOptions -XX:-UseContainerSupport --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED   --add-opens=java.base/java.io=ALL-UNNAMED  --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED   --add-opens=java.base/sun.nio.ch=ALL-UNNAMED   --add-opens=java.base/java.util=ALL-UNNAMED   --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED"
     networks:
       cluster-network:
         ipv4_address: 10.5.0.4
